Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.5.0
-
None
Description
The newly added outer join test for IMPALA-2612 fails when partitioned hash join is disabled.
query_test/test_join_queries.py:96: in test_outer_joins self.run_test_case('tpch-outer-joins', new_vector) common/impala_test_suite.py:210: in run_test_case result = self.__execute_query(target_impalad_client, query, user=user) common/impala_test_suite.py:400: in __execute_query return impalad_client.execute(query, user=user) common/impala_connection.py:158: in execute return self.__beeswax_client.execute(sql_stmt, user=user) beeswax/impala_beeswax.py:161: in execute handle = self.__execute_query(query_string.strip(), user=user) beeswax/impala_beeswax.py:327: in __execute_query self.wait_for_completion(handle) beeswax/impala_beeswax.py:347: in wait_for_completion raise ImpalaBeeswaxException("Query aborted:" + error_log, None) E ImpalaBeeswaxException: ImpalaBeeswaxException: E Query aborted: E Memory limit exceeded E E E E Memory Limit Exceeded E Query(824b82ac07d5505c:8df53e18accec1b7) Limit: memory limit exceeded. Limit=300.00 MB Consumption=404.80 MB E Fragment 824b82ac07d5505c:8df53e18accec1b9: Consumption=404.80 MB E AGGREGATION_NODE (id=3): Consumption=8.01 MB E HASH_JOIN_NODE (id=2): Consumption=374.84 MB E Exprs: Consumption=256.00 MB E HDFS_SCAN_NODE (id=0): Consumption=0 E EXCHANGE_NODE (id=4): Consumption=0 E DataStreamRecvr: Consumption=21.93 MB E DataStreamSender: Consumption=16.00 KB E Block Manager: Limit=200.00 MB Consumption=0 E Memory Limit Exceeded E Query(824b82ac07d5505c:8df53e18accec1b7) Limit: memory limit exceeded. Limit=300.00 MB Consumption=412.32 MB E Fragment 824b82ac07d5505c:8df53e18accec1b8: Consumption=8.02 MB E AGGREGATION_NODE (id=6): Consumption=8.01 MB E EXCHANGE_NODE (id=5): Consumption=0 E DataStreamRecvr: Consumption=0 E Block Manager: Limit=200.00 MB Consumption=0 E Fragment 824b82ac07d5505c:8df53e18accec1ba: Consumption=404.29 MB E AGGREGATION_NODE (id=3): Consumption=8.01 MB E HASH_JOIN_NODE (id=2): Consumption=374.32 MB E Exprs: Consumption=256.00 MB E HDFS_SCAN_NODE (id=0): Consumption=0 E EXCHANGE_NODE (id=4): Consumption=0 E DataStreamRecvr: Consumption=21.93 MB E DataStreamSender: Consumption=16.00 KB E Fragment 824b82ac07d5505c:8df53e18accec1bb: Consumption=10.66 KB E HDFS_SCAN_NODE (id=1): Consumption=0 E DataStreamSender: Consumption=10.66 KB
-- executing against localhost:21000 SET mem_limit = 300m; -- executing against localhost:21000 SELECT COUNT(*) from orders t1 LEFT OUTER JOIN orders t2 ON cast(t1.o_comment as char(120)) = cast(t2.o_comment as char(120));
http://sandbox.jenkins.cloudera.com/job/impala-master-cdh5-trunk-non-partitioned-hash-and-aggs/148